--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </section>
     <section class="activities">
       <div class="activities-container">
-        <h2>Магазин Глэйси — это  онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+        <h2>Магазин Глэйси — <span class="con">это  онлайн</span>- и<span class="con-1"> офлайн</span>-<span class="con-2">магазин по продаже мороженого собственного</span> производства на развес</h2>
         <div class="activities-container-wrapper">
           <div class="activities-container-wrapper-1">
             <div class="activities-item">
@@ -170,7 +170,7 @@
       </div>
       <div class="newsletter">
         <div class="newsletter-wrapper">
-          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
+          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,<span class="nev">что у нас происходит.</span><span class="nev-1">Обещаем не спамить и не слать всякой ненужной ерунды.</span><span class="nev-3">Честно =)</span>
           </p>
           <form class="newsletter-form" action="#">
             <input type="text" name="mail" placeholder="Электронная почта">
@@ -186,7 +186,7 @@
   <div class="address">
     <p class="address-texte">Адрес главного офиса
     и офлайн-магазина:</p>
-    <h2>ул.Большая  Конюшенная 19/8,Санкт-Петербург</h2>
+    <h2>ул.<span class="adres">Большая Конюшенная</span> 19/8,<span class="adres-1">Санкт-Петербург</span></h2>
     <p class="till-texte">Для заказов по телефону:</p>
     <p class="tell">8 812 450-25-25</p>
     <p class="time">(с 10 до 20 ежедневно)</p>
@@ -214,7 +214,7 @@
       </div>
       <div class="footer-documentation">
         <ul>
-          <li><a href="#">Для поставщиков</a></li>
+          <li><a href="#"><img src="img/heart.svg">Для поставщиков</a></li>
           <li><a href="#">О производстве</a></li>
           <li><a href="#">Наши документы</a></li>
           <li><a href="#">Экологические стандарты</a></li>
